--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/app/styles/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -77,7 +77,7 @@
                 "input": "public"
               }
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/app/styles/styles.scss"],
             "scripts": []
           }
         }
